; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-luma-wipe.c_luma_wipe_destroy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-luma-wipe.c_luma_wipe_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.luma_wipe_info = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @luma_wipe_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @luma_wipe_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.luma_wipe_info*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.luma_wipe_info*
  store %struct.luma_wipe_info* %5, %struct.luma_wipe_info** %3, align 8
  %6 = call i32 (...) @obs_enter_graphics()
  %7 = load %struct.luma_wipe_info*, %struct.luma_wipe_info** %3, align 8
  %8 = getelementptr inbounds %struct.luma_wipe_info, %struct.luma_wipe_info* %7, i32 0, i32 1
  %9 = call i32 @gs_image_file_free(i32* %8)
  %10 = call i32 (...) @obs_leave_graphics()
  %11 = load %struct.luma_wipe_info*, %struct.luma_wipe_info** %3, align 8
  %12 = getelementptr inbounds %struct.luma_wipe_info, %struct.luma_wipe_info* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @obs_data_release(i32 %13)
  %15 = load %struct.luma_wipe_info*, %struct.luma_wipe_info** %3, align 8
  %16 = call i32 @bfree(%struct.luma_wipe_info* %15)
  ret void
}

declare dso_local i32 @obs_enter_graphics(...) #1

declare dso_local i32 @gs_image_file_free(i32*) #1

declare dso_local i32 @obs_leave_graphics(...) #1

declare dso_local i32 @obs_data_release(i32) #1

declare dso_local i32 @bfree(%struct.luma_wipe_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
